# brave-api

./: .pre-commit-config.yaml  README.md  justfile  prek.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
brave_api/: __init__.py  client.py  constants.py  response.py  retries.py  util.py
brave_api/answers/: models.py
brave_api/image_search/: models.py
brave_api/llm_context/: models.py
brave_api/local_search/: models.py
brave_api/news_search/: models.py
brave_api/rich_search/: models.py
brave_api/spellcheck/: models.py
brave_api/suggest/: models.py
brave_api/summarizer_search/: models.py
brave_api/video_search/: models.py
brave_api/web_search/: models.py
tests/: conftest.py
tests/client/: fakes.py  test_client.py  test_retries.py
tests/endpoints/: test_validators.py
tests/integration/: test_live_client.py
tests/web_search/: test_models.py
