[project]
name = "brave-api-client"
description = "Brave API client for Python"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "niquests",
    "pydantic",
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

packages = [
    { include = "brave_api" },
]

[project.urls]
repository = "https://github.com/xelandernt/brave-api"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["brave_api"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: integration tests that call the live Brave API",
]

[tool.pyrefly]
python-version = "3.10"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "prek>=0.3.8",
    "pyrefly>=0.60.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
